Combinación de los 3 commits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Proyecto empresarial</h1>
     <p>Parrafo agregado. Modificación en master.</p>
 
-
+    <p>Git rebase interactivo primer commit pero nombrado intencionalmente como commit 1</p>
     <!-- <input type="button" onClick = "saludo()" value="Dale ya!" > -->
 
 </body>
